--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -10,8 +11,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="tooearly.neumont.edu.imagefilter.Activities.MainActivity">
 
-    <TextView
+
+    <ImageButton
+        android:id="@+id/captureImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="231dp"
+        android:layout_marginRight="231dp"
+        android:onClick="dispatchTakePictureIntent"
+        android:src="@drawable/takeImage" />
+
+    <ImageView
+        android:id="@+id/cameraView"
+        android:layout_width="600dp"
+        android:layout_height="700dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+         />
 </RelativeLayout>
