--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -4,19 +4,22 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="10dp">
 
-        <TextView
-            android:layout_width="match_parent"
+
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Share Photo"
-            android:gravity="center"
-            android:textSize="40sp"
-            android:paddingBottom="10dp"
-            />
+            android:layout_marginLeft="500dp"
+            android:src="@drawable/share" />
+
 
     </LinearLayout>
 
