--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -21,26 +22,34 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@android:drawable/ic_media_rew"
-                android:onClick="onUndoClicked" />
+                android:onClick="onUndoClicked"
+                tools:ignore="ContentDescription">
+            </ImageButton>
             <ImageButton
                 android:id="@+id/imageButton3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@android:drawable/ic_media_ff"
                 android:layout_marginRight="380dp"
-                android:onClick="onRedoClicked" />
+                android:onClick="onRedoClicked"
+                tools:ignore="ContentDescription">
+            </ImageButton>
             <ImageButton
                 android:id="@+id/imageButton4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@android:drawable/ic_menu_share"
-                android:onClick="onShareClicked" />
+                android:onClick="onShareClicked"
+                tools:ignore="ContentDescription">
+            </ImageButton>
             <ImageButton
                 android:id="@+id/imageButton5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@android:drawable/ic_menu_save"
-                android:onClick="onSaveClicked" />
+                android:onClick="onSaveClicked"
+                tools:ignore="ContentDescription">
+            </ImageButton>
 
         </LinearLayout>
 
@@ -48,10 +57,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/imageView"
+            <tooearly.neumont.edu.imagefilter.Views.PaintView
+                android:id="@+id/paintView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></ImageView>
+                android:layout_height="match_parent">
+            </tooearly.neumont.edu.imagefilter.Views.PaintView>
 
         </LinearLayout>
 
@@ -65,7 +75,7 @@
         android:background="#111111"
         android:dividerHeight="1dp"
         android:choiceMode="singleChoice"
-        android:divider="@android:color/white"
-        />
+        android:divider="@android:color/white">
+    </ListView>
 
 </android.support.v4.widget.DrawerLayout>
