--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -18,7 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="500dp"
-            android:src="@drawable/share" />
+            android:src="@drawable/share"
+            android:onClick="shareScreen()"/>
 
 
     </LinearLayout>
