--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="500dp"
             android:src="@drawable/share"
-            android:onClick="shareScreen()"/>
+            android:onClick="shareScreen"/>
 
 
     </LinearLayout>
@@ -33,12 +33,16 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
              />
-
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name: "
+            android:textSize="30sp">
+        </TextView>
+
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Name"
-
             android:textSize="30sp"
             android:paddingLeft="10dp"
             />
@@ -56,11 +60,11 @@
             android:text="Description: "
             android:textSize="30sp">
         </TextView>
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/photoDescription">
-        </TextView>
+        </EditText>
     </LinearLayout>
 
 
