--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -4,14 +4,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="10dp">
-
-
 
         <ImageButton
             android:id="@+id/imageButton"
@@ -19,8 +15,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="500dp"
             android:src="@drawable/share"
-            android:onClick="shareScreen"/>
-
+            android:onClick="onShareScreenClicked">
+        </ImageButton>
 
     </LinearLayout>
 
@@ -29,49 +25,37 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/img_preview"
             android:layout_width="200dp"
-            android:layout_height="200dp"
-             />
+            android:layout_height="200dp">
+        </ImageView>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name: "
+            android:text="@string/lbl_share_name"
             android:textSize="30sp">
         </TextView>
-
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="30sp"
             android:paddingLeft="10dp"
-            />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Description: "
-            android:textSize="30sp">
-        </TextView>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/photoDescription">
+            android:paddingRight="10dp"
+            android:id="@+id/txt_name">
         </EditText>
+
     </LinearLayout>
 
-
-
-
-
-
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbl_share_description"
+        android:textSize="30sp">
+    </TextView>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/photoDescription">
+    </EditText>
 
 </LinearLayout>
